fix: mejorar busqueda de empleados y filtro de usuarios inactivos